--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 
-url = "mongodb://0.0.0.0:27017/chat"
+MONGO_URL= "mongodb+srv://vidhangour20:vidhangour@chat.bylwuix.mongodb.net/?retryWrites=true&w=majority&appName=chat"
